log
Wed, Mar 19, 2025  8:25:05 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:39:46 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
b9b7d3f
Wed, Mar 19, 2025  8:40:20 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, *(int*)i);
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
53a0aa4
Wed, Mar 19, 2025  8:40:53 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'imprime_y_vacia_pila':
exercises.c:31:16: error: format '%d' expects argument of type 'int', but argument 2 has type 'int *' [-Werror=format=]
       printf("%d ", &(*(int*)dato));
                ^
exercises.c: In function 'crea_lista':
exercises.c:48:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, *(int*)i);
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
701172a
Wed, Mar 19, 2025  8:41:35 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
bd98f6f
Wed, Mar 19, 2025  8:44:50 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:16: error: passing argument 1 of 'pushBack' from incompatible pointer type [-Werror=incompatible-pointer-types]
       pushBack(&L, i);
                ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'List * {aka struct List *}' but argument is of type 'List ** {aka struct List **}'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:48:20: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(&L, i);
                    ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4786f9f
Wed, Mar 19, 2025  8:46:31 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
cb071bb
Wed, Mar 19, 2025  8:49:54 AM: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:20: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
       pushFront(L, i);
                    ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'void *' but argument is of type 'int'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
31b7ee2
Wed, Mar 19, 2025  8:52:03 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ef5e320
Wed, Mar 19, 2025  8:52:26 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8005ead
Wed, Mar 19, 2025  8:52:45 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
797a3d0
Wed, Mar 19, 2025  8:58:19 AM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += numero;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
b98c24c
Wed, Mar 19, 2025  8:58:42 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += numero;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
a4ea207
Wed, Mar 19, 2025  9:01:44 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *numero = next(L);
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
3b358c7
Wed, Mar 19, 2025  9:02:51 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
37dd3e4
Wed, Mar 19, 2025  9:05:43 AM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:17: error: comparison between pointer and integer [-Werror]
       if(numero == elem) popCurrent(numero);
                 ^~
exercises.c:87:37: error: passing argument 1 of 'popCurrent' from incompatible pointer type [-Werror=incompatible-pointer-types]
       if(numero == elem) popCurrent(numero);
                                     ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: expected 'List * {aka struct List *}' but argument is of type 'int *'
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
18d3268
Wed, Mar 19, 2025  9:08:03 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:17: error: comparison between pointer and integer [-Werror]
       if(numero == elem) popCurrent(L);
                 ^~
cc1.exe: all warnings being treated as errors
Compilation failed
d7500b7
Wed, Mar 19, 2025  9:10:12 AM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:103:10: error: 'numero' undeclared (first use in this function)
    while(numero != NULL){
          ^~~~~~
exercises.c:103:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:104:20: error: 'elem' undeclared (first use in this function)
       if(numero == elem) popCurrent(L);
                    ^~~~
exercises.c:104:37: error: 'L' undeclared (first use in this function)
       if(numero == elem) popCurrent(L);
                                     ^
Compilation failed
e59a917
Wed, Mar 19, 2025  9:12:23 AM: 
 exercises.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  3|2
total_score: 40/70
3eaa452
Wed, Mar 19, 2025  9:15:19 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:106:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *numero = numP1;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
bbf5f42
Wed, Mar 19, 2025  9:21:46 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
4d902e1
Wed, Mar 19, 2025  9:26:13 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
e814460
